force/src/objects/QA_Patient_Review__c.object
<CustomObject>
    <fields>
        <fullName>Relationship_to_Member__c</fullName>
        <label>Relationship to Member</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Handicap Dependent</fullName>
                </value>
                <value>
                    <fullName>Dependent Parent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Replacement_N_A_Perf__c</fullName>
        <label>Replacement -N/A Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Subj_Obj_Perf__c</fullName>
        <label>Response Subj. Obj. Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retinal_Imaging_Type__c</fullName>
        <label>If 3 is No, If applicable select:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retinal Imaging</fullName>
                </value>
                <value>
                    <fullName>OptoMap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Auditor_Name__c</fullName>
        <label>Review Auditor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slit_Lamp_Evaluation_w_CL_Perf__c</fullName>
        <label>Slit Lamp Evaluation w/CL Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Slit_Lamp_Evaluation_w_o_CL_Perf__c</fullName>
        <label>Slit Lamp Evaluation w/o CL Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subj_Rx_Perf__c</fullName>
        <label>Subj. Rx Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tonometry_19_over_Doc__c</fullName>
        <label>Tonometry 19 yrs &amp; Over Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tonometry_19_over_Perf__c</fullName>
        <label>Tonometry 19 yrs &amp; Over Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treatment_Doc__c</fullName>
        <label>Treatment Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treatment_Perf__c</fullName>
        <label>Treatment Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treatment_consistent_with_diagnosis__c</fullName>
        <label>Treatment consistent with diagnosis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Under_Care_of_Specialist__c</fullName>
        <label>Under Care of Specialist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VA_w_CL_Perf__c</fullName>
        <label>VA w/CL Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VA_w_o_CL_Perf__c</fullName>
        <label>VA w/o CL Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Versions_Doc__c</fullName>
        <label>Versions Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Versions_Perf__c</fullName>
        <label>Versions Perf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visual_Field_Progression_Stabilized__c</fullName>
        <label>Visual Field Progression Stabilized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_a_Consultation_Documented__c</fullName>
        <label>Was a Consultation Documented</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_appropriate_procedures_performed__c</fullName>
        <label>Were appropriate procedures performed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_procedures_performed_contact_lens__c</fullName>
        <label>Were procedures performed contact lens</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_Communication_Rationale__c</fullName>
        <label>What is Communication Rationale?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patient under care of Ophthalmogist</fullName>
                </value>
                <value>
                    <fullName>PCP is an institution (Kaiser)</fullName>
                </value>
                <value>
                    <fullName>Letter previously sent within LTM</fullName>
                </value>
                <value>
                    <fullName>Patient did not provide PCP</fullName>
                </value>
                <value>
                    <fullName>Patient declined to have letter sent</fullName>
                </value>
                <value>
                    <fullName>Part of medical record</fullName>
                </value>
                <value>
                    <fullName>PCP orders requesting exam are included</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QA Patient Review</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>QA Patient Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Patient Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>